erDiagram

    users {
        UUID id PK
    }

    categories {
        UUID id PK
        VARCHAR(128) name
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    listings {
        UUID id PK
        UUID seller_id FK
        UUID category_id FK
        VARCHAR(255) title
        TEXT description
        VARCHAR(32) condition
        INTEGER price
        TEXT[] images
        VARCHAR(255) location
        VARCHAR(32) status
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    listing_status_history {
        UUID id PK
        UUID listing_id FK
        VARCHAR(32) from_status
        VARCHAR(32) to_status
        TIMESTAMPTZ changed_at
    }

    user_listing_interaction {
        UUID id PK
        UUID user_id FK
        UUID listing_id FK
        INTEGER interaction_count
        TIMESTAMPTZ first_interaction_at
        TIMESTAMPTZ last_interaction_at
    }

    interaction_events {
        UUID id PK
        UUID user_id FK
        UUID listing_id FK
        TIMESTAMPTZ interaction_timestamp
    }

    purchases {
        UUID id PK
        UUID listing_id FK
        UUID buyer_id FK
        INTEGER price_at_purchase
        TIMESTAMPTZ purchased_at
        INTEGER seller_rating
    }

    categories ||--o{ listings : "classifies"
    users ||--o{ listings : "publishes"
    listings ||--o{ listing_status_history : "tracks state changes"
    listings ||--o{ user_listing_interaction : "records user events"
    listings ||--o{ interaction_events : "records visits"
    users ||--o{ user_listing_interaction : "interacts"
    users ||--o{ interaction_events : "generates"
    listings ||--o| purchases : "sold via"
    users ||--o{ purchases : "buys"
